syntax = "proto3";

option go_package = ".;generated";

package protobuf;

import "google/protobuf/empty.proto";
import "protobuf/messages.proto";

service Messages {
  rpc SwitchMesssageType(protobuf.Bytes) returns(google.protobuf.Empty) {}
  rpc SendMessage(protobuf.WebSocketMessage) returns(google.protobuf.Empty) {}
  rpc EditMessage(protobuf.WebSocketMessage) returns(google.protobuf.Empty) {}
  rpc DeleteMessage(protobuf.WebSocketMessage) returns(google.protobuf.Empty) {}
  rpc ReceiveMessage(google.protobuf.Empty) returns(Bytes) {}
}
